feat: modules were added dashboard, header, login and register

--- a/src/app/tex/tex.page.html
+++ b/src/app/tex/tex.page.html
@@ -23,8 +23,8 @@
 
 <ion-footer>
     <div class="message-input">
-        <ion-input [(ngModel)]="messageToSend" placeholder="Fale com a Tex"></ion-input>
-        <ion-button (click)="sendMessage()">
+        <ion-input [(ngModel)]="messageToSend" placeholder="   Fale com a Tex"></ion-input>
+        <ion-button class="send-btn" (click)="sendMessage()">
             <ion-icon slot="icon-only" name="send"></ion-icon>
         </ion-button>
     </div>
