--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,7 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content class="ion-padding">
+    <div class="logo-container">
+        <img src="./assets/images/logo.png" alt="Logo" class="logo">
+    </div>
+    <ion-button expand="full" class="login" (click)="onLoginButtonClick()">Entrar</ion-button>
+    <ion-button expand="full" class="register" (click)="onRegisterButtonClick()">Registre-se</ion-button>
 </ion-content>
