feat: menu and footer were added

--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -1,5 +1,5 @@
 ion-content {
-  --background: #173B5D;
+  --background: #13907E;
   display: flex;
   flex-direction: column;
   justify-content: center;
