--- a/src/app/component/header/header.page.scss
+++ b/src/app/component/header/header.page.scss
@@ -22,6 +22,7 @@ ion-toolbar {
 .left-section {
   display: flex;
   align-items: center;
+  justify-content: flex-start;
 
   ion-avatar {
     margin-right: 10px;
@@ -51,6 +52,7 @@ ion-toolbar {
 }
 
 .chat-header-expanded {
+  align-items: flex-start;
   height: 200px;
   border-radius: 0 0 60px 60px;
   --box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.25);
