chore: menu were added to tex page

--- a/src/app/tex/tex.page.html
+++ b/src/app/tex/tex.page.html
@@ -1,16 +1,4 @@
-<ion-header>
-    <ion-toolbar>
-        <div class="chat-header">
-            <ion-avatar slot="start">
-                <img src="./assets/images/tex.jpg" alt="Silhouette of Tex's head" />
-            </ion-avatar>
-            <div class="chat-header-info">
-                <h2>Tex</h2>
-                <p>Online</p>
-            </div>
-        </div>
-    </ion-toolbar>
-</ion-header>
+<app-header [hasReturnButton]="true" [hasAvatar]="true" [hasMenuButton]="true"></app-header>
 
 <ion-content>
     <div class="messages">
