--- a/src/app/component/header/header.page.scss
+++ b/src/app/component/header/header.page.scss
@@ -24,6 +24,12 @@ ion-toolbar {
   align-items: center;
   justify-content: flex-start;
 
+  .avatar-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
   ion-avatar {
     margin-right: 10px;
   }
