--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,15 @@
-<ion-content class="ion-padding">
-    <div class="logo-container">
-        <img src="./assets/images/logo.png" alt="Logo" class="logo">
+<ion-content>
+  <div id="header">
+    <div id="logo">
+      <img src="./assets/images/logo.png" alt="Logo" class="logo">
     </div>
-    <ion-button expand="full" class="login" (click)="onLoginButtonClick()">Entrar</ion-button>
-    <ion-button expand="full" class="register" (click)="onRegisterButtonClick()">Registre-se</ion-button>
+  </div>
+
+  <ion-card class="ion-padding">
+    <ion-card-content>
+      <p>Cuidando da sua mente, um contexto de cada vez</p>
+      <ion-button expand="block" (click)="onLoginButtonClick()">Login</ion-button>
+      <ion-button expand="block" fill="outline" (click)="onRegisterButtonClick()">Cadastro</ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
