--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,3 +1,31 @@
-<ion-content class="ion-padding">
-LOGIN
+<ion-content>
+  <div id="header">
+
+    <div id="app-bar">
+      <ion-icon name="arrow-back" (click)="onHomeButtonClick()"></ion-icon>
+    </div>
+
+    <div id="logo">
+      <img src="./assets/images/logo.png" alt="Logo" class="logo">
+    </div>
+  </div>
+
+  <div class="wrapper">
+    <ion-card class="form-wrapper">
+      <ion-card-content>
+        <h2>LOGIN</h2>
+        <ion-item>
+          <ion-icon name="mail"></ion-icon>
+          <ion-input type="text" placeholder="E-mail"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-icon name="lock-closed"></ion-icon>
+          <ion-input type="password" placeholder="Senha"></ion-input>
+        </ion-item>
+
+        <ion-button expand="block">Entrar</ion-button>
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
