--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,5 +1,41 @@
-<app-header [isExpanded]="true" [hasReturnButton]="true"></app-header>
+<ion-content>
+  <div id="header">
 
-<ion-content class="ion-padding">
-REGISTER
+    <div id="app-bar">
+      <ion-icon name="arrow-back" (click)="onHomeButtonClick()"></ion-icon>
+    </div>
+
+    <div id="logo">
+      <img src="./assets/images/logo.png" alt="Logo" class="logo">
+    </div>
+  </div>
+
+  <div class="wrapper">
+    <ion-card class="form-wrapper">
+      <ion-card-content>
+        <h2>CADASTRO</h2>
+        <ion-item>
+          <ion-icon name="person"></ion-icon>
+          <ion-input type="text" placeholder="Nome"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-icon name="mail"></ion-icon>
+          <ion-input type="text" placeholder="E-mail"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-icon name="lock-closed"></ion-icon>
+          <ion-input type="password" placeholder="Senha"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-icon name="lock-closed"></ion-icon>
+          <ion-input type="password" placeholder="Confirme a Senha"></ion-input>
+        </ion-item>
+
+        <ion-button expand="block">Cadastrar</ion-button>
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
