--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,8 +1,53 @@
 ion-content {
-  --background: #173B5D;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  --background: #13907e;
+
+  #header {
+    height: 50%;
+    background: #173b5d;
+    display: flex;
+    flex-direction: column;
+    color: #ffffff;
+    border-radius: 0px 0px 20px 20px;
+
+    #logo {
+      width: 150px;
+      height: 150px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      align-self: center;
+      margin-top: 20%;
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+
+  ion-card {
+    box-shadow: none;
+    position: absolute;
+    top: 37%;
+    left: 5%;
+    right: 5%;
+    border-radius: 20px;
+    --background: #ffffff;
+
+    p {
+      color: #173b5d;
+      text-align: center;
+      font-size: 16px;
+      font-weight: 600;
+      margin-bottom: 30px;
+    }
+
+    ion-button {
+      height: 40px;
+      --box-shadow: none;
+      text-transform: initial;
+      font-size: 16px;
+      letter-spacing: 0;
+      font-weight: 400;
+    }
+  }
 }
