--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -34,7 +34,7 @@
           <ion-input type="password" placeholder="Confirme a Senha"></ion-input>
         </ion-item>
 
-        <ion-button expand="block">Cadastrar</ion-button>
+        <ion-button expand="block" (click)="onRegisterButtonClick()">Cadastrar</ion-button>
       </ion-card-content>
     </ion-card>
   </div>
