--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -24,7 +24,7 @@
           <ion-input type="password" placeholder="Senha"></ion-input>
         </ion-item>
 
-        <ion-button expand="block">Entrar</ion-button>
+        <ion-button expand="block" (click)="onLoginButtonClick()">Entrar</ion-button>
       </ion-card-content>
     </ion-card>
   </div>
