fix: menu's adjustments

--- a/src/app/component/menu/menu.page.scss
+++ b/src/app/component/menu/menu.page.scss
@@ -10,8 +10,7 @@ ion-content {
 }
 
 ion-button {
-  margin: 0;
-  padding: 10px;
+  height: 60px;
   border-bottom: #13907E solid 3px;
   --background: transparent;
   --box-shadow: none;
