refactor: unnecessary code were removed

--- a/src/app/component/header/header.page.html
+++ b/src/app/component/header/header.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <div class="header-container" [ngClass]="{'chat-header-expanded': isExpanded, 'chat-header': !isExpanded}">
+    <div class="header-container chat-header">
             <div class="left-section">
                 <ion-button class="return-btn" (click)="backToLastPage()" *ngIf="hasReturnButton">
                     <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
