--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -1,7 +1,7 @@
 <ion-content>
 
     <div id="dashboard">
-        <app-header [isExpanded]="true" [hasReturnButton]="true" [hasMenuButton]="true"></app-header>
+        <app-header [hasReturnButton]="true" [hasMenuButton]="true"></app-header>
     </div>
 
     <div class="wrapper">
