--- a/src/app/dashboard/dashboard.page.scss
+++ b/src/app/dashboard/dashboard.page.scss
@@ -1,19 +1,55 @@
 ion-content {
   --background: #13907e;
 
-  .wrapper {
-    position: absolute;
-    top: 40%;
-    left: 4%;
-    right: 4%;
+  #header {
+    height: 40%;
+    background: #173b5d;
+    display: flex;
+    flex-direction: column;
+    color: #FDF9F6;
+    border-radius: 0px 0px 20px 20px;
 
-    .form-wrapper {
-      box-shadow: none;
-      border-radius: 20px;
-      padding: 15px 10px;
-      background: #ffffff;
+    #tex-message {
+      width: 100%;
+      height: 250px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      align-self: center;
+      margin-top: 2%;
+      padding: 20px;
+
+      .tex {
+        width: 90%;
+        border-radius: 50%;
+        border: #FDF9F6 solid 5px;
+      }
+
+      .message {
+        background-color: #FDF9F6;
+        margin-left: 20px;
+        padding: 0 20px;
+        border-radius: 25px;
+        color: #173b5d;
+        text-align: end;
+      }
     }
   }
 
-}
+  .wrapper {
+    --color: #173B5D;
+    margin: 5px 20px;
 
+    .card-wrapper {
+      box-shadow: none;
+      border-radius: 20px;
+      padding: 15px 10px;
+      background: #FDF9F6;
+    }
+
+    h2 {
+      color: #173b5d;
+      font-weight: bold;
+    }
+  }
+}
