--- a/src/app/tex/tex.page.html
+++ b/src/app/tex/tex.page.html
@@ -1,4 +1,4 @@
-<app-header [hasReturnButton]="true" [hasAvatar]="true" [hasMenuButton]="true"></app-header>
+<app-header [isMenuExpanded]="false"  [hasReturnButton]="true" [hasAvatar]="true" [hasMenuButton]="true"></app-header>
 
 <ion-content>
     <div class="messages">
