--- a/src/app/mood/mood.page.html
+++ b/src/app/mood/mood.page.html
@@ -1,4 +1,4 @@
-<app-header [hasReturnButton]="true" [hasAvatar]="false" [hasMenuButton]="true"></app-header>
+<app-header [isMenuExpanded]="false" [hasReturnButton]="true" [hasAvatar]="false" [hasMenuButton]="true"></app-header>
 
 <ion-content>
   <div id="title">
