fix: dashboard adjustments

--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -17,4 +17,10 @@
         </ion-card>
     </div>
 
+    <div id="btns" class="ion-padding">
+        <div class="btn" *ngFor="let btn of btns">
+            <p>{{ btn.label }}</p>
+        </div>
+    </div>
+
 </ion-content>
